# v2_12

./: .gitattributes  .gitignore  JFILES  LICENSE  README.md  ex.cmd  header.txt  undo.cmd
cflib_2_12/cplus/libcflib/: .gitignore  CFLib.cpp  CFLibArgumentException.cpp  CFLibArgumentOverflowException.cpp  CFLibArgumentRangeException.cpp  CFLibArgumentUnderflowException.cpp  CFLibCachedMessageLog.cpp  CFLibCollisionDetectedException.cpp  CFLibConsoleMessageLog.cpp  CFLibDbException.cpp  CFLibDbUtil.cpp  CFLibDependentsDetectedException.cpp  CFLibEmptyArgumentException.cpp  CFLibGenericBigDecimal.cpp  CFLibInvalidArgumentException.cpp  CFLibMathException.cpp  CFLibMustOverrideException.cpp  CFLibNotImplementedYetException.cpp  CFLibNotSupportedException.cpp  CFLibNullArgumentException.cpp  CFLibNullable.cpp  CFLibNullableBool.cpp  CFLibNullableDouble.cpp  CFLibNullableFloat.cpp  CFLibNullableInt16.cpp  CFLibNullableInt32.cpp  CFLibNullableInt64.cpp  CFLibNullableUInt16.cpp  CFLibNullableUInt32.cpp  CFLibNullableUInt64.cpp  CFLibPrimaryKeyNotNewException.cpp  CFLibRuntimeException.cpp  CFLibStaleCacheDetectedException.cpp  CFLibSubroutineException.cpp  CFLibUniqueIndexViolationException.cpp  CFLibUnrecognizedAttributeException.cpp  CFLibUnresolvedRelationException.cpp  CFLibUnsupportedClassException.cpp  CFLibUsageException.cpp  CFLibXmlCore.cpp  (+19 more)
cflib_2_12/cplus/libcflib/cflib/: CFLib.hpp  CFLibArgumentException.hpp  CFLibArgumentOverflowException.hpp  CFLibArgumentRangeException.hpp  (+54 more)
cflib_2_12/cplus/testcflib/: .gitignore  Makefile.am  configure.ac  testcflib.cpp
(+9792 files in other folders)
