AC_INIT([MSS Code Factory CFLib],2.12.11137,[msobkow@sasktel.net],[libcflib],[http://msscodefactory.sourceforge.net/])
AC_COPYRIGHT([Copyright (c) 2018 Mark Sobkow])
AC_REVISION(2.12.11137)
AM_INIT_AUTOMAKE([foreign])
AC_PROG_CXX()
LT_INIT([shared])
AC_DISABLE_STATIC
AC_CONFIG_FILES([
	Makefile
	cflib/Makefile
])
AC_CONFIG_MACRO_DIRS([m4])
AC_OUTPUT
